# tp-2020-1c-C90

./: .delibird.sh.swo  .gitignore  README.md  configuracion-entrega.sh  delibird.sh  entrega.sh  kill.sh  pruebas-entrega.sh
gameboy/: CMakeLists.txt  buddy_basico.sh  deploy.sh  makefile
gameboy/config/: entrega_gameboy.config  gameboy.config  gameboy.configr
gameboy/custom_scripts/: a_custom_catch_90_after.sh  a_custom_new_pokemon_90.sh  aa_antes_team.sh  aa_new_gamecard.sh  aa_post_team.sh  c_custom_get_pikachus_150_after.sh  c_custom_new_pikachus_200.sh  loco.sh  new_pokemon_ten.sh
gameboy/include/app/: App.h  Global.h  Servicios.h
gameboy/include/controladores/: ControladorPedidosGameBoy.h
gameboy/include/modelo/: PedidoGameBoy.h
gameboy/scripts/: buddy_basico.sh  cargar_memoria_complejo.sh  cargar_memoria_simple.sh  catch_charmander.sh  compactacion_basico.sh  consolidacion_basico.sh  new_pikachu.sh  new_pokemon_antes_team.sh  new_pokemon_post_team.sh  new_pokemon_varios.sh  prueba_final_team.sh
gameboy/src/: App.c
gameboy/src/controladores/: ControladorPedidosGameBoy.c
gameboy/src/modelo/: PedidoGameBoy.c
libs/: CMakeLists.txt  README.md  install.sh  uninstall.sh
libs/include/: interface.h  protocol.h
libs/src/: caught_pokemon.c  get_pokemon.c  localized_pokemon.c  new_pokemon.c  pokemon.c  utils.c
libs/src/servicios/: ServicioDeConfiguracion.c
team/: CMakeLists.txt  deploy.sh
team/config/: entrega_team_1.config  entrega_team_1_fifo.config  entrega_team_1_sjf_sd.config  entrega_team_2.config  entrega_team_2_rr.config  entrega_team_2_sjf_cd.config  fifo.config  round_robin.config  sjf_con_desalojo.config  sjf_sin_desalojo.config  team.config  team1PruebaCompletaFIFO.config  team1PruebaCompletaSJFSD.config  team2PruebaCompletaRR.config  team2PruebaCompletaSJFCD.config  teamFIFO.config  teamRR.config  teamSJF-CD.config  teamSJF-SD.config  teamSJF_CD.config  teamSJF_SD.config
team/include/app/: App.h  Global.h  Servicios.h
team/include/cliente/: ClienteBroker.h  ClienteBrokerV2.h  ClienteBroquer.h
team/include/deadlock/: DeteccionDeDeadlock.h  ResolucionDeDeadlock.h
team/include/manejadorDeEventos/: ManejadorDeEventos.h
team/include/planificador/: Planificador.h
team/include/servidor/: ServidorTeam.h
team/include/test/: TestDeIntegracion.h
team/resources/: class_template.md  ejemplo_flujo_CATCH_CAUGHT.md  inicializacion_del_team.md
team/scripts/: prueba_final_team.sh
team/src/: App.c
team/src/Cliente/: Cliente.c
team/src/cliente/: ClienteBroker.c  ClienteBrokerV2.c
team/src/manejadorDeEventos/: ManejadorDeEventos.c
team/src/planificador/: AlgoritmoPlanificador.c  Planificador.c
team/src/servidor/: ServidorTeam.c
team/src/test/: TestAlgoritmos.c  TestAlgoritmosSJFsinDesalojo.c  TestClienteBroker.c  TestDeIntegracion.c  TestDeadlock.c  TestEntrenadores.c  TestEventos.c  TestIntercambio.c  TestLibs.c  TestMapa.c  TestMovimiento.c  TestPlanificable.c  TestPlanificacion.c  TestPlanificador.c  TestPokemon.c  TestServicioCaptura.c  TestServicioDeMetricas.c  TestServicioPlanificador.c  TestTareas.c  TestTransicionadorEstados.c  (+1 more)
(+211 files in other folders)
